Implement category management with routing, CRUD operations, and table features
- **Routing**:
  - Added routing for `PublicRoute`, `GuestRoute`, `AuthenticatedRoute`, and `PrivateRoute` to manage access control.
  - Implemented slice, thunk, and services to handle routing logic efficiently.

- **Category Management (Admin only)**:
  - Restricted access to category management to Admin role users only.

- **Category Listing**:
  - Integrated Material React Table to display the category list with pagination, filtering, and sorting.
  - Implemented server-side pagination, filtering, sorting, and rows per page.
  - Added checkbox for selecting multiple records.
  - Error handling: Display error messages for failed operations.
  - Added 'Add Category', 'Update Category', and 'Delete Category' buttons with corresponding actions.
  - Pending: 'Delete Selected Record(s)' functionality to display selected record IDs.
  - Enabled column actions: Hide/Show, Sorting, Filtering for each column.

- **Add Category**:
  - Implemented client-side validation using Formik and Yup.
  - Integrated server-side validation to manage form input.
  - Added duplicate category name check to prevent inserting duplicate records.
  - Upon successful validation, category is added to the database and the datatable is refreshed.

- **Update Category**:
  - Implemented functionality to send category ID and perform a soft delete.
  - Upon deletion, category listing is automatically refreshed.

- **Delete Category**:
  - Added a confirmation dialog with the category name to confirm deletion.
  - Implemented soft deletion with ID sending. Refresh the category listing after deletion.
  - Error handling: Display error message if category data is not found.

- **UI Improvements**:
  - Added animation to buttons for better user interaction and UI responsiveness.

This update improves category management functionality, enhances UI interactivity, and ensures better error handling for a seamless user experienc

--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,8 @@ button:focus-visible {
 }
 
 .menu {
-  margin-right: 2.3%;
+  /* margin-right: 2.3%; */
+  margin-right: 5%;
 }
 
 .menu .menu-item {
@@ -174,13 +175,18 @@ button:focus-visible {
 
 }
 
-.home-about-us {
+.home-about-us,.home-why-me,.home-about-tech {
   margin-top: 3%;
 }
 
-.about-us {
+.about-us, .why-me {
   padding: 2%;
   background-color: #fff;
+  color: var(--bg-primary);
+}
+.why-tech {
+  padding: 2%;
+  background-color: var(--bg-primary);
   color: var(--bg-primary);
 }
 
@@ -223,10 +229,36 @@ button:focus-visible {
   font-weight: bold !important;
 }
 
+.rdt_TableCol{
+  background-color: #0a0f24 !important;
+   color: #fae3cf !important;
+}
 /*  Media Query  */
 
 @media (max-width: 960px) {
   .desktop-only {
     display: none !important;
   }
+}
+
+
+
+
+.features {
+  background-color: #f5f5f5;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.about-me-icons{
+  color: var(--bg-primary) !important;
+  background-color: var(--bg-secondary) !important;
+}/* 
+.about-me-icons:hover{
+  background-color: var(--bg-primary) !important;
+  color: var(--bg-secondary) !important;
+} */
+.about-tech{
+  background-color: #fff;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
