--- a/src/index.css
+++ b/src/index.css
@@ -141,12 +141,12 @@ button:focus-visible {
 
 .menu {
   /* margin-right: 2.3%; */
-  margin-right: 5%;
+  /* margin-right: 5%; */
 }
 
 .menu .menu-item {
   color: var(--bg-secondary);
-  margin-right: 3%;
+  margin-left: 3%;
   font-weight: bold;
 }
 
@@ -175,11 +175,11 @@ button:focus-visible {
 
 }
 
-.home-about-us,.home-why-me,.home-about-tech,.hire-me-connect {
+.home-about-us,.home-why-me,.home-about-tech,.hire-me-connect,.blogs-page {
   margin-top: 3%;
 }
 
-.about-us, .why-me {
+.about-us, .why-me, .blogs-page {
   padding: 2%;
   background-color: #fff;
   color: var(--bg-primary);
@@ -219,7 +219,6 @@ button:focus-visible {
 }
 
 .auth-box-card {
-
   background-color: #fff;
   filter: drop-shadow(0px 0px 10px var(--bg-primary));
   border-radius: 10px;
@@ -244,7 +243,7 @@ button:focus-visible {
 
 
 
-.features {
+.features, .blog-list {
   background-color: #f5f5f5;
   padding-top: 3rem;
   padding-bottom: 3rem;
